Actualizar web html_pruebas

--- a/web.html
+++ b/web.html
@@ -8,5 +8,6 @@
 <body>
     <div>Mi primer commit en GitHub</div>
     <p>Verificar si está almacenando los cambios en GitHub</p>
+    <p>otra prueba con git commit -m "Actualizar Web html"</p>
 </body>
 </html>
