El segundo commit segun tutorial

--- a/web.html
+++ b/web.html
@@ -8,6 +8,7 @@
 <body>
     <div>Mi primer commit en GitHub</div>
     <p>Verificar si está almacenando los cambios en GitHub</p>
-    <p>otra prueba con git commit -m "Actualizar Web html"</p>
+    <h1>Me recuerdan hacer el curso de GitHub, se GitHub
+        realiza un segundo commit.</h1>
 </body>
 </html>
